Revise WebSecurityOidcLoginConfig